--- a/Header.html
+++ b/Header.html
@@ -16,5 +16,5 @@
                 <a href="#" class="brand-logo">Blood Bank Management System</a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="right ">
-                    <li><a href="SignIn.jsp"><i class="fa fa-sign-in"></i>SignIn</a></li>
+                    <li><a href="SignIn.jsp"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;SignIn</a></li>
                 </ul>
