--- a/user/userHeader.html
+++ b/user/userHeader.html
@@ -15,7 +15,7 @@
                 <div class="nav-wrapper">
                     <a id="userLogoAlign" href="#" class="brand-logo">Logo</a>
                     <ul class="right">
-                        <li><a href="sass.html">Sign Out</a></li>
+                        <li><a href="sass.html"><i class="fa fa-sign-out"></i>&nbsp;&nbsp;Sign Out</a></li>
                     </ul>
                     <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
@@ -25,19 +25,20 @@
                     <li>
                         <div class="user-view">
                             <div class="background">
-                                <img src="http://via.placeholder.com/300x160">
+                                <img src="http://placekitten.com/g/300/160">
                             </div>
-                            <a href="#!user"><img class="circle" src="http://via.placeholder.com/64x64"></a>
+                            <a href="#!user"><img class="circle" src="http://placekitten.com/g/64/64"></a>
                             <a href="#!name"><span class="white-text name">Vaibhav Vijay</span></a>
                             <a href="#!email"><span class="white-text email">vaibhavvijay9@gmail.com</span></a>
                         </div>
                     </li>
-                    <li><a href="#!">Profile</a></li>
+                    <li><a href="profile.jsp">Profile</a></li>
                     <li><a href="#!">Fix Appointment</a></li>
                     <li><a href="#!">Donation Details</a></li>
                     <li><a href="#!">Request Blood</a></li>
-                    <li><a href="#!">Write Your Story</a></li>
-                    <li><a href="#!">Change Password</a></li>
+                    <li><a href="yourStory.jsp">Write Your Story</a></li>
+                    <li><a href="changePassword.jsp">Change Password</a></li>
+                    <li><a href="feedback.jsp">Feedback</a></li>
                 </ul>
             </nav>
 
@@ -47,6 +48,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
