--- a/user/userHeader.html
+++ b/user/userHeader.html
@@ -27,7 +27,7 @@
                             <div class="background">
                                 <img src="http://placekitten.com/g/300/160">
                             </div>
-                            <a href="#!user"><img class="circle" src="http://placekitten.com/g/64/64"></a>
+                            <a href="#!user"><img class="circle" src="../images/viru.jpg"></a>
                             <a href="#!name"><span class="white-text name">Vaibhav Vijay</span></a>
                             <a href="#!email"><span class="white-text email">vaibhavvijay9@gmail.com</span></a>
                         </div>
