--- a/Header.html
+++ b/Header.html
@@ -1,20 +1,33 @@
 <html>
 
 <head>
-    <title>Blood Bank</title>
+    <title>People's Blood Bank</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' type='text/css' href='css/style.css'>
+    <link rel="icon" href="images/16x16.png" type="image/gif" sizes="16x16">
 </head>
 
 <body>
     <main>
         <!--NavBar Begin-->
         <nav class="nav-extended">
-            <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Blood Bank Management System</a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                <ul id="nav-mobile" class="right ">
-                    <li><a href="SignIn.jsp"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;SignIn</a></li>
-                </ul>
+            <div>
+                <img src="images/100x100.png">
+            </div>
+            <div id="navWidth">
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo">People's Blood Bank</a>
+                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                    <ul id="nav-mobile" class="right ">
+                        <li><a href="SignIn.jsp"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;SignIn</a></li>
+                    </ul>
+                    <ul class="side-nav" id="mobile-demo">
+                        <li class="tab"><a class="active" href="index.jsp"><i class="material-icons">home</i>Home</a></li>
+                        <li class="tab"><a href="aboutUs.jsp"><i class="material-icons">info</i>About Us</a></li>
+                        <li class="tab"><a href="contactUs.jsp"><i class="material-icons">contact_mail</i>Contact Us</a></li>
+                        <li class="tab"><a href="inquiry.jsp"><i class="material-icons">info</i>Inquiry</a></li>
+                        <li class="tab"><a href="faq.jsp"><i class="material-icons">question_answer</i>FAQ</a></li>
+                    </ul>
+                </div>
