--- a/Header.html
+++ b/Header.html
@@ -12,22 +12,23 @@
 <body>
     <main>
         <!--NavBar Begin-->
-        <nav class="nav-extended">
-            <div>
-                <img src="images/100x100.png">
-            </div>
-            <div id="navWidth">
-                <div class="nav-wrapper">
-                    <a href="#" class="brand-logo">People's Blood Bank</a>
-                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                    <ul id="nav-mobile" class="right ">
-                        <li><a href="SignIn.jsp"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;SignIn</a></li>
-                    </ul>
-                    <ul class="side-nav" id="mobile-demo">
-                        <li class="tab"><a class="active" href="index.jsp"><i class="material-icons">home</i>Home</a></li>
-                        <li class="tab"><a href="aboutUs.jsp"><i class="material-icons">info</i>About Us</a></li>
-                        <li class="tab"><a href="contactUs.jsp"><i class="material-icons">contact_mail</i>Contact Us</a></li>
-                        <li class="tab"><a href="inquiry.jsp"><i class="material-icons">info</i>Inquiry</a></li>
-                        <li class="tab"><a href="faq.jsp"><i class="material-icons">question_answer</i>FAQ</a></li>
-                    </ul>
+        <div id="navBar" class="navbar-fixed">
+            <nav class="nav-extended">
+                <div id="navLogo">
+                    <img src="images/100x100.png">
                 </div>
+                <div id="navWidth">
+                    <div class="nav-wrapper">
+                        <a href="#" class="brand-logo">People's Blood Bank</a>
+                        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                        <ul id="nav-mobile" class="right ">
+                            <li><a href="SignIn.jsp"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;SignIn</a></li>
+                        </ul>
+                        <ul class="side-nav" id="mobile-demo">
+                            <li class="tab"><a class="active" href="index.jsp"><i class="material-icons">home</i>Home</a></li>
+                            <li class="tab"><a href="aboutUs.jsp"><i class="material-icons">info</i>About Us</a></li>
+                            <li class="tab"><a href="contactUs.jsp"><i class="material-icons">contact_mail</i>Contact Us</a></li>
+                            <li class="tab"><a href="inquiry.jsp"><i class="material-icons">info</i>Inquiry</a></li>
+                            <li class="tab"><a href="faq.jsp"><i class="material-icons">question_answer</i>FAQ</a></li>
+                        </ul>
+                    </div>
