--- a/user/userHeader.html
+++ b/user/userHeader.html
@@ -9,41 +9,38 @@
 </head>
 
 <body>
-    <div>
-        <div>
-            <nav class="nav-extended" id="userNav">
-                <div class="nav-wrapper">
-                    <a id="userLogoAlign" href="#" class="brand-logo">Logo</a>
-                    <ul class="right">
-                        <li><a href="sass.html"><i class="fa fa-sign-out"></i>&nbsp;&nbsp;Sign Out</a></li>
-                    </ul>
-                    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
-
-                </div>
-
-                <ul id="slide-out" class="side-nav fixed">
-                    <li>
-                        <div class="user-view">
-                            <div class="background">
-                                <img src="http://placekitten.com/g/300/160">
-                            </div>
-                            <a href="#!user"><img class="circle" src="../images/viru.jpg"></a>
-                            <a href="#!name"><span class="white-text name">Vaibhav Vijay</span></a>
-                            <a href="#!email"><span class="white-text email">vaibhavvijay9@gmail.com</span></a>
-                        </div>
-                    </li>
-                    <li><a href="profile.jsp">Profile</a></li>
-                    <li><a href="#!">Fix Appointment</a></li>
-                    <li><a href="#!">Donation Details</a></li>
-                    <li><a href="#!">Request Blood</a></li>
-                    <li><a href="yourStory.jsp">Write Your Story</a></li>
-                    <li><a href="changePassword.jsp">Change Password</a></li>
-                    <li><a href="feedback.jsp">Feedback</a></li>
-                </ul>
-            </nav>
+    <nav class="nav-extended" id="userNav">
+        <div class="nav-wrapper">
+            <img id="userContent" src="../images/100x100.png">
+            <a href="#" class="brand-logo center">Logo</a>
+            <ul class="right">
+                <li><a href="sass.html"><i class="fa fa-sign-out"></i>&nbsp;&nbsp;Sign Out</a></li>
+            </ul>
+            <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
         </div>
-    </div>
+
+        <ul id="slide-out" class="side-nav fixed">
+            <li>
+                <div class="user-view">
+                    <div class="background">
+                        <img src="http://placekitten.com/g/300/160">
+                    </div>
+
+                    <span id="profilePic">V</span>
+                    <span class="white-text name">Vaibhav Vijay</span>
+                    <span class="white-text email">vaibhavvijay9@gmail.com</span>
+                </div>
+            </li>
+            <li><a href="profile.jsp">Profile</a></li>
+            <li><a href="#!">Fix Appointment</a></li>
+            <li><a href="#!">Donation Details</a></li>
+            <li><a href="#!">Request Blood</a></li>
+            <li><a href="yourStory.jsp">Write Your Story</a></li>
+            <li><a href="changePassword.jsp">Change Password</a></li>
+            <li><a href="feedback.jsp">Feedback</a></li>
+        </ul>
+    </nav>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
