--- a/Header.html
+++ b/Header.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <!--NavBar Begin-->
-        <div id="navBar" class="navbar-fixed">
+        <div id="navBar">
             <nav class="nav-extended">
                 <div id="navLogo">
                     <img src="images/100x100.png">
