--- a/admin/adminHeader.html
+++ b/admin/adminHeader.html
@@ -32,18 +32,18 @@
                         <img src="../images/cover.jpg">
                     </div>
 
-                    <span id="profilePic">V</span>
-                    <span class="white-text name">Vaibhav Vijay</span>
-                    <span class="white-text email">vaibhavvijay9@gmail.com</span>
+                    <span id="profilePic">A</span>
+                    <span class="white-text name">Ajay Kumar</span>
+                    <span class="white-text email">ajaykumar333@gmail.com</span>
                 </div>
             </li>
             <li><a href="profile.jsp">Profile</a></li>
-            <li><a href="#!">Fix Appointment</a></li>
-            <li><a href="donationDetails.jsp">Donation Details</a></li>
-            <li><a href="#!">Request Blood</a></li>
-            <li><a href="yourStory.jsp">Write Your Story</a></li>
+            <li><a href="Registration.jsp">Register User</a></li>
+            <li><a href="registerCamp.jsp">Register Camp</a></li>
+            <li><a href="manageStock.jsp">Manage Stock</a></li>
+            <li><a href="manageInquiry.jsp">Inquiry</a></li>
+            <li><a href="manageFeedback.jsp">Feedback</a></li>
             <li><a href="changePassword.jsp">Change Password</a></li>
-            <li><a href="feedback.jsp">Feedback</a></li>
         </ul>
     </nav>
 
