--- a/user/userHeader.html
+++ b/user/userHeader.html
@@ -16,9 +16,9 @@
         <div class="nav-wrapper">
             <div id="imgAlign">
                 <img src="../images/100x100.png">
-                <a class="brand-logo">People's Blood Bank</a>
+                <a class="brand-logo hide-on-med-and-down">People's Blood Bank</a>
                 <ul class="right">
-                    <li><a href="sass.html"><i class="fa fa-sign-out"></i>&nbsp;&nbsp;Sign Out</a></li>
+                    <li><a href="sass.html" class="hide-on-med-and-down"><i class="fa fa-sign-out"></i>&nbsp;&nbsp;Sign Out</a></li>
                 </ul>
                 <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
             </div>
@@ -38,12 +38,13 @@
                 </div>
             </li>
             <li><a href="profile.jsp">Profile</a></li>
-            <li><a href="#!">Fix Appointment</a></li>
+            <li><a href="fixAppointment.jsp">Fix Appointment</a></li>
             <li><a href="donationDetails.jsp">Donation Details</a></li>
             <li><a href="#!">Request Blood</a></li>
             <li><a href="yourStory.jsp">Write Your Story</a></li>
             <li><a href="changePassword.jsp">Change Password</a></li>
             <li><a href="feedback.jsp">Feedback</a></li>
+            <li class="hide1"><a href="sass.html">Sign Out</a></li>
         </ul>
     </nav>
 
