--- a/admin/adminHeader.html
+++ b/admin/adminHeader.html
@@ -16,9 +16,9 @@
         <div class="nav-wrapper">
             <div id="imgAlign">
                 <img src="../images/100x100.png">
-                <a class="brand-logo">People's Blood Bank</a>
+                <a class="brand-logo hide-on-med-and-down">People's Blood Bank</a>
                 <ul class="right">
-                    <li><a href="sass.html"><i class="fa fa-sign-out"></i>&nbsp;&nbsp;Sign Out</a></li>
+                    <li class="hide-on-med-and-down"><a href="sass.html"><i class="fa fa-sign-out"></i>&nbsp;&nbsp;Sign Out</a></li>
                 </ul>
                 <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
             </div>
@@ -41,9 +41,11 @@
             <li><a href="Registration.jsp">Register User</a></li>
             <li><a href="registerCamp.jsp">Register Camp</a></li>
             <li><a href="manageStock.jsp">Manage Stock</a></li>
+            <li><a href="manageAppointments.jsp">Manage Appointments/Donations</a></li>
             <li><a href="manageInquiry.jsp">Inquiry</a></li>
             <li><a href="manageFeedback.jsp">Feedback</a></li>
             <li><a href="changePassword.jsp">Change Password</a></li>
+            <li class="hide1"><a href="sass.html">Sign Out</a></li>
         </ul>
     </nav>
 
