--- a/admin/adminHeader.html
+++ b/admin/adminHeader.html
@@ -39,11 +39,12 @@
             </li>
             <li><a href="profile.jsp">Profile</a></li>
             <li><a href="Registration.jsp">Register User</a></li>
-            <li><a href="registerCamp.jsp">Register Camp</a></li>
+            <li><a href="registerCamp.jsp">Register/Manage Camp</a></li>
             <li><a href="manageStock.jsp">Manage Stock</a></li>
             <li><a href="manageAppointments.jsp">Manage Appointments/Donations</a></li>
-            <li><a href="manageInquiry.jsp">Inquiry</a></li>
-            <li><a href="manageFeedback.jsp">Feedback</a></li>
+            <li><a href="manageInquiry.jsp">Manage Inquiry</a></li>
+            <li><a href="manageFeedback.jsp">Manage Feedback</a></li>
+            <li><a href="userStories.jsp">User Stories</a></li>
             <li><a href="changePassword.jsp">Change Password</a></li>
             <li class="hide1"><a href="sass.html">Sign Out</a></li>
         </ul>
