--- a/admin/adminHeader.html
+++ b/admin/adminHeader.html
@@ -37,6 +37,7 @@
                     <span class="white-text email">ajaykumar333@gmail.com</span>
                 </div>
             </li>
+            <li><a href="index.jsp">Home</a></li>
             <li><a href="profile.jsp">Profile</a></li>
             <li><a href="Registration.jsp">Register User</a></li>
             <li><a href="registerCamp.jsp">Register/Manage Camp</a></li>
@@ -49,7 +50,6 @@
             <li class="hide1"><a href="sass.html">Sign Out</a></li>
         </ul>
     </nav>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
     <script src="js/index.js"></script>
