--- a/user/userHeader.html
+++ b/user/userHeader.html
@@ -41,7 +41,7 @@
             <li><a href="fixAppointment.jsp">Fix Appointment</a></li>
             <li><a href="registerForCamp.jsp">Register For Camp</a></li>
             <li><a href="donationDetails.jsp">Donation Details</a></li>
-            <li><a href="#!">Request Blood</a></li>
+            <li><a href="requestBlood.jsp">Request Blood</a></li>
             <li><a href="yourStory.jsp">Write Your Story</a></li>
             <li><a href="feedback.jsp">Feedback</a></li>
             <li><a href="changePassword.jsp">Change Password</a></li>
