--- a/admin/adminHeader.html
+++ b/admin/adminHeader.html
@@ -43,6 +43,7 @@
             <li><a href="registerCamp.jsp">Register/Manage Camp</a></li>
             <li><a href="manageStock.jsp">Manage Stock</a></li>
             <li><a href="manageAppointments.jsp">Manage Appointments/Donations</a></li>
+            <li><a href="manageRequests.jsp">Manage Requests</a></li>
             <li><a href="manageInquiry.jsp">Manage Inquiry</a></li>
             <li><a href="manageFeedback.jsp">Manage Feedback</a></li>
             <li><a href="userStories.jsp">User Stories</a></li>
