--- a/user/userHeader.html
+++ b/user/userHeader.html
@@ -37,6 +37,7 @@
                     <span class="white-text email">vaibhavvijay9@gmail.com</span>
                 </div>
             </li>
+            <li><a href="index.jsp">Home</a></li>
             <li><a href="profile.jsp">Profile</a></li>
             <li><a href="fixAppointment.jsp">Fix Appointment</a></li>
             <li><a href="registerForCamp.jsp">Register For Camp</a></li>
