--- a/Footer.html
+++ b/Footer.html
@@ -4,7 +4,7 @@
     <footer class="page-footer">
         <div class="footer-copyright">
             <div class="container">
-                &copy 2017 Blood Bank
+                &copy 2017 People's Blood Bank
             </div>
         </div>
     </footer>
@@ -13,8 +13,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-<script src="js/navBar.js"></script>
-<script src="js/login.js"></script>
+<script src="js/index.js"></script>
 </body>
 
 </html>
