--- a/Header.html
+++ b/Header.html
@@ -18,14 +18,12 @@
         <div>
             <nav class="nav-extended">
                 <a href="#" data-activates="mobile-demo" class="button-collapse left"><i class="material-icons">menu</i></a>
-                <div>
-                    <img src="images/100x100.png">
-                </div>
+                <a href="index.jsp"><img src="images/100x100.png"></a>
                 <div id="navWidth">
                     <div class="nav-wrapper">
-                        <a href="#" class="brand-logo hide-on-med-and-down">People's Blood Bank</a>
+                        <a href="index.jsp" class="brand-logo hide-on-med-and-down">People's Blood Bank</a>
                         <ul class="right hide-on-med-and-down">
-                            <li><a href="SignIn.jsp"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;SignIn</a></li>
+                            <li><a href="signIn.jsp"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;SignIn</a></li>
                         </ul>
                         <ul class="side-nav" id="mobile-demo">
                             <li class="tab"><a class="active" href="index.jsp"><i class="material-icons">home</i>Home</a></li>
@@ -33,7 +31,7 @@
                             <li class="tab"><a href="contactUs.jsp"><i class="material-icons">contact_mail</i>Contact Us</a></li>
                             <li class="tab"><a href="inquiry.jsp"><i class="material-icons">info</i>Inquiry</a></li>
                             <li class="tab"><a href="faq.jsp"><i class="material-icons">question_answer</i>FAQ</a></li>
-                            <li><a href="#modal1"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;SignIn</a></li>
+                            <li><a href="signIn.jsp"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;SignIn</a></li>
                         </ul>
                         </ul>
                     </div>
